--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "assignment5",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "description": "assignment5",
   "author": "Tim Twigg",
   "keywords": [
@@ -10,7 +10,9 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
-    "build": "gatsby build",
+    "predeploy": "npm run clean && npm run build",
+    "deploy": "gh-pages -d public",
+    "build": "gatsby build --prefix-paths",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit"
@@ -31,6 +33,7 @@
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.5"
   }
 }
