--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-transformer-sharp": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.59.3"
   },
   "devDependencies": {
