--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "chroma-js": "^2.4.2",
     "gatsby": "^5.7.0",
     "gatsby-plugin-image": "^3.7.0",
     "gatsby-plugin-manifest": "^5.7.0",
@@ -34,6 +36,7 @@
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slick": "^0.23.10",
     "gh-pages": "^5.0.0",
     "typescript": "^4.9.5"
   }
