--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -o -p 8000",
     "start": "gatsby develop",
     "predeploy": "npm run clean && npm run build",
     "deploy": "gh-pages -d public",
@@ -18,6 +18,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.0.3",
     "axios": "^1.3.4",
     "chroma-js": "^2.4.2",
     "gatsby": "^5.7.0",
@@ -27,17 +28,19 @@
     "gatsby-plugin-sharp": "^5.7.0",
     "gatsby-source-filesystem": "^5.7.0",
     "gatsby-transformer-sharp": "^5.7.0",
+    "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-slick": "^0.29.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router": "^6.9.0",
     "sass": "^1.59.3"
   },
   "devDependencies": {
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/react-slick": "^0.23.10",
     "gh-pages": "^5.0.0",
+    "react-router-dom": "^6.9.0",
     "typescript": "^4.9.5"
   }
 }
